adicionado efeito de card saltado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header__class">
-      <nav>
+      <nav class="center">
         <ul>
           <li>
             <a href="">Homeopatia</a>
@@ -43,31 +43,42 @@
     </header>
     <main>
       <section class="about">
-        <h1>O que é Homeopatia?</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-          consequatur ab laudantium enim sint, iure incidunt modi tempore. Quasi
-          magnam itaque error enim minima iure facere nihil ducimus amet id.
-        </p>
-      </section>
-      <section class="about__cirlon">
-        <h1>Sobre mim</h1>
-        <p>
+        <h1 class="text-center">O que é Homeopatia?</h1>
+        <p class="text-justify">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
           consequatur ab laudantium enim sint, iure incidunt modi tempore. Quasi
           magnam itaque error enim minima iure facere nihil ducimus amet id.
         </p>
       </section>
       <section class="prova__de__vida">
-        <h1>Relatos</h1>
+        <h1 class="text-center">Relatos</h1>
         <div class="prova__de__vida-acordion">
-          <h4>André de Souza Moreira</h4>
-          <p>
+          <h4 class="text-center">André de Souza Moreira</h4>
+          <p class="text-justify">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita,
             dolore harum. Illo ratione in earum veritatis optio facilis beatae
             nulla eligendi. Assumenda
           </p>
         </div>
+        <div class="prova__de__vida-acordion">
+          <h4 class="text-center">André de Souza Moreira</h4>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita,
+            dolore harum. Illo ratione in earum veritatis optio facilis beatae
+            nulla eligendi. Assumenda
+          </p>
+        </div>
+        <div class="prova__de__vida-acordion">
+          <h4 class="text-center">André de Souza Moreira</h4>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita,
+            dolore harum. Illo ratione in earum veritatis optio facilis beatae
+            nulla eligendi. Assumenda
+          </p>
+        </div>
+      </section>
+      <section class="faq__section">
+        <h1 class="text-center">Dúvidas frequentes</h1>
       </section>
     </main>
     <footer></footer>
