--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="header__img">
           <img
             src="src/images/logo.png"
-            alt="Foto terapeuta homeopata Cirlon Pereira Moreira"
+            alt="saraiva homeopatia tratamento natural remédio natural farmacia cirlon pereira moreira"
           />
         </div>
       </div>
